k8s/base/microservices-react/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-react-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: local.microservices.react.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /home(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /dashboard(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80                
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /admin-page
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /teams/get(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80        
          - path: /users/get(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /users/update(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
          - path: /issues/update(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
